--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.6",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.3",
+    "classnames": "^2.5.1",
     "gsap": "^3.12.7",
+    "merge-refs": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.0",
     "sass": "^1.86.3",
     "sass-loader": "^16.0.5",
