--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dolaanpls/react-awesome-button": "^8.0.0",
     "@floating-ui/react": "^0.27.6",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.3",
